--- a/potluck-planner/src/App.css
+++ b/potluck-planner/src/App.css
@@ -39,10 +39,12 @@
 input {
   margin-top: 20px;
 }
-.background{
-
-max-height: 100vh;
-background-repeat: no-repeat;
-background-size: cover;
-background-image:url('https://images.unsplash.com/photo-1493770348161-369560ae357d?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Zm9vZHxlbnwwfDB8MHx8&ixlib=rb-1.2.1') ;
+.background {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("https://images.unsplash.com/photo-1493770348161-369560ae357d?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Zm9vZHxlbnwwfDB8MHx8&ixlib=rb-1.2.1");
 }
