--- a/potluck-planner/src/App.css
+++ b/potluck-planner/src/App.css
@@ -39,12 +39,17 @@
 input {
   margin-top: 20px;
 }
-/* .background {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100vh;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://images.unsplash.com/photo-1493770348161-369560ae357d?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8Zm9vZHxlbnwwfDB8MHx8&ixlib=rb-1.2.1");
-} */
+ input[type="date"]:before {
+  content: attr(placeholder) !important;
+  color: rgb(59, 57, 57);
+  margin-left: 1em;
+  padding-right: 2em;
+  font-size: 1.1rem;
+} 
+input[type="time"]:before {
+  content: attr(placeholder) !important;
+  color: rgb(59, 57, 57);
+  margin-left: 1em;
+  padding-right: 3em;
+  font-size: 1.1rem;
+}
